format bug fixed* reconfigured wrapping procedure
restart format of cnt 2

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,15 +4,17 @@ body {
 	margin: 0 auto;
 }
 /* Page Wrap*/
+
 .wrapper {
-	margin: 0 auto;
-	display: flex;
-	min-width: 100vh;
-	max-width: 1280px;
-	padding-left: 2%;
-	padding-right: 2%;
-	direction: column;
-	
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 0;
+    min-width: 100vh;
+    max-width: 1280px;
+    padding-left: 2%;
+    padding-right: 2%;
+    direction: column;
+    padding-top: 3%;
 }
 /* Header */
 .top-sticky {
@@ -20,9 +22,6 @@ body {
     background-color: rgba(135,186,220,0.70);
     padding-top: 0px;
     width: 100%;
-	
-	
-	
 	
 }
 
@@ -125,37 +124,88 @@ button {
 }
 /*Content Area 1*/
 #cnt1 {
-    font-family: Helvetica Neue;
-    font-weight: 500;
-    color: #156872;
-    font-size: 32px;
+    max-width: 100%;
+    overflow: hidden;
+    margin-top: -3%;
+    padding-bottom: 1%;
+}
+#cnt1 h1.intro {
     transform: matrix(1.255,0,0,1.255,0,0);
-    max-width: 99%;
-    margin-top: 50px;
+    font-size: 32px;
+    max-width: 90%;
+    text-align: center;
+    padding-left: 5%;
+}
+.feauture-col {
+    display: inline-block;
+    width: 30%;
+    vertical-align: top;
+    margin-top: 5%;
+	text-align: center;
+}
+
+.feauture-col span {
+    display: block;
+    font-size: 26px;
+    padding-left: 1px;
+    font-style: oblique;
+}
+.feauture-col p {
+    font-size: 14px;
+    margin-top: 0%;
+    text-align: center;
 }
 .promo {
-    text-align: center;
+   
     align-items: center;
     width: 100%;
     padding-right: 4px;
     padding-left: 4px;
     padding-top: 6px;
-}
-.feauture-col {
     display: inline-block;
-    align-items: baseline;
-    width: 30%;
 }
-.feauture-col span {
+
+/* Call to Action*/
+#c2a {
+	min-height: 400px;
+	background: #f6fafc;
+	overflow: hidden;
+	
+}
+#c2a .container-fluid {
+    text-align: center;
+    position: relative;
+    max-width: 75%;
+    padding-top: 0%;
+}
+#in2 {
+    padding: 10px 15px 11px !important;
+    font-size: 22px !important;
+    background-color: #57d6c7;
+    font-weight: bold;
+    text-shadow: 1px 1px #57D6C7;
+    color: #ffffff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border: 1px solid #57D6C7;
+    cursor: pointer;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+    min-width: 60%;
+	
+}
+#email-form {
+    margin-top: 2%;
+}
+
+#trucker-find img {
     display: block;
-    font-size: 22px;
-    align-items: baseline;
-    padding-left: 1px;
-}
-.feauture-col p {
-    font-size: 14px;
-    max-width: 80%;
-    margin-top: 0%;
-    display: inherit;
-    text-align: justify;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    max-width: 200px;
 }
